[package]
name = "compload"
version = "0.1.0"
authors = ["Christophe Sadoine <chris@indefini.org>"]

[lib]
name = "compload"
crate-type = ["dylib"]

[dependencies]
uuid = {version = "0.3.1", features = [ "v4", "rustc-serialize" ] }

[dependencies.dormin]
git = "https://github.com/indefini/dormin.git"

[dependencies.pulse]
git = "https://github.com/indefini/pulse.git"

[dependencies.rustc-serialize]
git = "https://github.com/indefini/rustc-serialize.git"


